--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
   <title>Spotify</title>
 </head>
 <body>
+
+  <header>
+    <div class="btn">bottone</div>
+  </header>
+
+
+  <main>
+    <div class="container">
+      <div class="menu-laterale">menu</div>
+
+      <div class="main-content">
+        
+      </div>
+    </div>
+
+  </main>
+
+  <footer>
+    <div class="footer-left">sinistra</div>
+    <div class="footer-center">centro</div>
+    <div class="footer-right">destra</div>
+  </footer>
   
 </body>
 </html>
