--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
 
   <header>
-    <div class="btn">bottone</div>
+    <div class="btn"><a href="#">effettua l'upgrade</a>
+    </div>
   </header>
 
 
