added nav menu in main

--- a/index.html
+++ b/index.html
@@ -21,8 +21,18 @@
       <div class="menu-laterale">menu</div>
 
       <div class="main-content">
-        
+        <nav class="main-menu">
+          <ul>
+            <li>in evidenza</li>
+            <li>podcast</li>
+            <li>classifiche</li>
+            <li>generi e mood</li>
+            <li>nuove uscite</li>
+            <li>scopri</li>
+          </ul>
+        </nav>
       </div>
+      
     </div>
 
   </main>
