--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="main-content">
         <nav class="main-menu">
           <ul>
-            <li>in evidenza</li>
+            <li class="active">in evidenza</li>
             <li>podcast</li>
             <li>classifiche</li>
             <li>generi e mood</li>
@@ -32,7 +32,7 @@
           </ul>
         </nav>
       </div>
-      
+
     </div>
 
   </main>
