added playlists structure in main

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <div class="menu-laterale">menu</div>
 
       <div class="main-content">
+        
+        <!-- nav menu -->
         <nav class="main-menu">
           <ul>
             <li class="active">in evidenza</li>
@@ -31,6 +33,83 @@
             <li>scopri</li>
           </ul>
         </nav>
+
+        <!-- sezione playlists -->
+        <section class="box debug">
+
+          <!-- Recently played -->
+          <h2>Recently played</h2>
+          <div class="row debug">
+            <div class="box-song"> 
+              <div class="album"></div>
+              <p>Heavy Metal</p>
+              <span>Subtitle</span>
+            </div>
+
+            <div class="box-song"> 
+              <div class="album"></div>
+              <p>Stranger Things Vol.1 (a Netflix Original Series Soundtrack)</p>
+              <span>Kylie Dixon & Michael Stane</span>
+            </div>
+
+            <div class="box-song"> 
+              <div class="album"></div>
+              <p>A quiet place</p>
+              <span>Subtitle</span>
+            </div>
+
+            <div class="box-song"> 
+              <div class="album"></div>
+              <p>Split</p>
+              <span>Subtitle</span>
+            </div>
+
+            <div class="box-song"> 
+              <div class="album"></div>
+              <p>A cure for wellness</p>
+              <span>Subtitle</span>
+            </div>
+
+            <div class="box-song"> 
+              <div class="album"></div>
+              <p>Sinister</p>
+              <span>Subtitle</span>
+            </div>
+          
+          </div>
+
+          <!-- creato per John Doe -->
+          <h2>Creato per John Doe</h2>
+          <p>Più ascolti, più accurati saranno i suggerimenti</p>
+          <div class="row debug">
+            <div class="box-song"> 
+              <div class="album"></div>
+              <p>Release Radar</p>
+            </div>
+
+            <div class="box-song"> 
+              <div class="album"></div>
+              <p>Daily Mix 1</p>
+            </div>
+          </div>  
+
+          <!-- artisti più popolari -->
+          <h2>Artisti più popolari</h2>
+          <p>Più ascolti, più accurati saranno i suggerimenti</p>
+          <div class="row debug">
+            <div class="box-song"> 
+              <div class="album"></div>
+              <p>Lana Del Rey</p>
+            </div>
+
+            <div class="box-song"> 
+              <div class="album"></div>
+              <p>Ludovico Einaudi</p>
+            </div>
+          </div> 
+
+        </section>
+
       </div>
 
     </div>
