added footer left

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="stylesheet" href="css/style.css">
   <title>Spotify</title>
@@ -117,7 +118,23 @@
   </main>
 
   <footer>
-    <div class="footer-left">sinistra</div>
+    <!-- footer left -->
+    <div class="footer-left">
+      <div class="anteprima">
+        <img src="img/sinister.jpeg" alt="sinister">
+        
+        <div class="brano">
+          <p>Sinister</p>
+          <p>Brano Nome</p>
+        </div>
+      </div>
+
+      <div class="options">
+          <i class="fa-regular fa-heart"></i>
+          <i class="fa-regular fa-folder"></i>
+      </div>
+    </div>
+
     <div class="footer-center">centro</div>
     <div class="footer-right">destra</div>
   </footer>
