--- a/index.html
+++ b/index.html
@@ -135,8 +135,21 @@
       </div>
     </div>
 
+    <!-- footer center -->
     <div class="footer-center">centro</div>
-    <div class="footer-right">destra</div>
+
+    <!-- footer right -->
+    <div class="footer-right">
+      <div class="icons">
+       <i class="fa-solid fa-list"></i>
+       <i class="fa-solid fa-desktop"></i>
+       <i class="fa-solid fa-volume-high"></i>
+      </div>
+      <div class="bar">
+        <hr>
+      </div>
+    </div>
+
   </footer>
   
 </body>
