added lateral menu

--- a/index.html
+++ b/index.html
@@ -19,7 +19,61 @@
 
   <main>
     <div class="container">
-      <div class="menu-laterale">menu</div>
+      <!-- menu laterale -->
+      <div class="menu-laterale">
+        <div class="menu-rapido">
+          
+          <img src="img/logo.svg" alt="logobig" id="logo-big">
+
+          <nav>
+            <ul>
+              <li>
+                <img src="img/home.svg" alt="home">
+                <span>Home</span>
+              </li>
+              <li>
+                <img src="img/search.svg" alt="search">
+                <span>Cerca</span>
+              </li>
+              <li>
+                <img src="img/libreria.svg" alt="library">
+                <span>La tua libreria</span>
+              </li>
+           </ul>
+          </nav>
+
+          <h4>PLAYLIST</h4>
+          <span><i class="fa-solid fa-square-plus"></i> Crea Playlist</span>
+
+          <div class="lista-playlist">
+            <ul>
+              <li>Nome Playlist</li>
+              <li>Nome Playlist</li>
+              <li>Nome Playlist</li>
+              <li>Nome Playlist</li>
+              <li>Nome Playlist</li>
+              <li>Nome Playlist</li>
+              <li>Nome Playlist</li>
+            </ul>
+          </div>
+
+        </div>
+
+        <div class="bottom-menu">
+          <div class="download">
+            <img src="img/download.svg" alt="download">
+            <span>Installa app</span>
+          </div>
+
+          <div class="profile">
+            <img src="img/profile.svg" alt="profile">
+            <span>John Doe</span>
+          </div>
+
+        </div>
+
+      </div>
+      <!-- /menu laterale -->
 
       <div class="main-content">
         
