added lateral menu responsiveness

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
           
           <img src="img/logo.svg" alt="logobig" id="logo-big">
 
+          <!-- mobile -->
+          <img src="img/logo-small.svg" alt="logosmall" id="logo-small">
+
           <nav>
             <ul>
               <li>
