added main responsive

--- a/index.html
+++ b/index.html
@@ -93,43 +93,53 @@
         </nav>
 
         <!-- sezione playlists -->
-        <section class="box debug">
+        <section class="box">
 
           <!-- Recently played -->
           <h2>Recently played</h2>
-          <div class="row debug">
+          <div class="row">
             <div class="box-song"> 
-              <div class="album"></div>
+              <div class="album">
+                <img src="img/metal_lifting.jpg" alt="Cover Heavy Metal">
+              </div>
               <p>Heavy Metal</p>
               <span>Subtitle</span>
             </div>
 
             <div class="box-song"> 
-              <div class="album"></div>
+              <div class="album">
+                <img src="img/stranger.jpeg" alt="Cover Stranger Things">
+              </div>
               <p>Stranger Things Vol.1 (a Netflix Original Series Soundtrack)</p>
               <span>Kylie Dixon & Michael Stane</span>
             </div>
 
             <div class="box-song"> 
-              <div class="album"></div>
+              <div class="album">
+                <img src="img/aquietplace.jpeg" alt="Cover Quiet Place">
+              </div>
               <p>A quiet place</p>
               <span>Subtitle</span>
             </div>
 
             <div class="box-song"> 
-              <div class="album"></div>
+              <div class="album">
+                <img src="img/split.jpeg" alt="Cover Split">
+              </div>
               <p>Split</p>
               <span>Subtitle</span>
             </div>
 
             <div class="box-song"> 
-              <div class="album"></div>
+              <div class="album">
+                <img src="img/cure.jpeg" alt="Cover Cure for wellness">
+              </div>
               <p>A cure for wellness</p>
               <span>Subtitle</span>
             </div>
 
             <div class="box-song"> 
-              <div class="album"></div>
+              <div class="album"><img src="img/sinister.jpeg" alt="Cover Sinister"></div>
               <p>Sinister</p>
               <span>Subtitle</span>
             </div>
@@ -138,30 +148,38 @@
 
           <!-- creato per John Doe -->
           <h2>Creato per John Doe</h2>
-          <p>Più ascolti, più accurati saranno i suggerimenti</p>
-          <div class="row debug">
+          <p class="suggerimenti">Più ascolti, più accurati saranno i suggerimenti</p>
+          <div class="row">
             <div class="box-song"> 
-              <div class="album"></div>
+              <div class="album">
+                <img src="img/radar.jpeg" alt="Cover Release">
+              </div>
               <p>Release Radar</p>
             </div>
 
             <div class="box-song"> 
-              <div class="album"></div>
+              <div class="album">
+                <img src="img/mixdaily.jpeg" alt="Cover Daily mix">
+              </div>
               <p>Daily Mix 1</p>
             </div>
           </div>  
 
           <!-- artisti più popolari -->
           <h2>Artisti più popolari</h2>
-          <p>Più ascolti, più accurati saranno i suggerimenti</p>
-          <div class="row debug">
+          <p class="suggerimenti">Più ascolti, più accurati saranno i suggerimenti</p>
+          <div class="row">
             <div class="box-song"> 
-              <div class="album"></div>
+              <div class="album">
+                <img class="rounded" src="img/youg.jpeg" alt="Cover Youg">
+              </div>
               <p>Lana Del Rey</p>
             </div>
 
             <div class="box-song"> 
-              <div class="album"></div>
+              <div class="album">
+                <img class="rounded" src="img/einaudi.jpeg" alt="Cover einaudi">
+              </div>
               <p>Ludovico Einaudi</p>
             </div>
           </div> 
