--- a/index.html
+++ b/index.html
@@ -211,7 +211,23 @@
     </div>
 
     <!-- footer center -->
-    <div class="footer-center">centro</div>
+    <div class="footer-center">
+
+      <div class="player-top">
+        <i class="fa-solid fa-shuffle"></i>
+        <i class="fa-solid fa-backward-step"></i>
+        <i class="fa-regular fa-circle-play"></i>
+        <i class="fa-solid fa-forward-step"></i>
+        <i class="fa-solid fa-rotate-right"></i>
+      </div>
+
+      <div class="player-bottom">
+        <span>0:25</span><input type="range" id="pitch"  min="0.1" max="2" step="0.1"><span>4:45</span>
+      </div>
+
+      
+    </div>
+
 
     <!-- footer right -->
     <div class="footer-right">
@@ -221,7 +237,7 @@
        <i class="fa-solid fa-volume-high"></i>
       </div>
       <div class="bar">
-        <hr>
+        <input type="range" id="pitch"  min="0.1" max="2" step="0.1">
       </div>
     </div>
 
