added hover in main

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
           <nav>
             <ul>
-              <li>
+              <li class="selected">
                 <img src="img/home.svg" alt="home">
                 <span>Home</span>
               </li>
@@ -101,6 +101,9 @@
             <div class="box-song"> 
               <div class="album">
                 <img src="img/metal_lifting.jpg" alt="Cover Heavy Metal">
+                <div class="play">
+                  <i id="click-play" class="fa-regular fa-circle-play"></i>
+                </div>
               </div>
               <p>Heavy Metal</p>
               <span>Subtitle</span>
@@ -109,6 +112,9 @@
             <div class="box-song"> 
               <div class="album">
                 <img src="img/stranger.jpeg" alt="Cover Stranger Things">
+                <div class="play">
+                  <i id="click-play" class="fa-regular fa-circle-play"></i>
+                </div>
               </div>
               <p>Stranger Things Vol.1 (a Netflix Original Series Soundtrack)</p>
               <span>Kylie Dixon & Michael Stane</span>
@@ -117,6 +123,9 @@
             <div class="box-song"> 
               <div class="album">
                 <img src="img/aquietplace.jpeg" alt="Cover Quiet Place">
+                <div class="play">
+                  <i id="click-play" class="fa-regular fa-circle-play"></i>
+                </div>
               </div>
               <p>A quiet place</p>
               <span>Subtitle</span>
@@ -125,6 +134,9 @@
             <div class="box-song"> 
               <div class="album">
                 <img src="img/split.jpeg" alt="Cover Split">
+                <div class="play">
+                  <i id="click-play" class="fa-regular fa-circle-play"></i>
+                </div>
               </div>
               <p>Split</p>
               <span>Subtitle</span>
@@ -133,13 +145,19 @@
             <div class="box-song"> 
               <div class="album">
                 <img src="img/cure.jpeg" alt="Cover Cure for wellness">
+                <div class="play">
+                  <i id="click-play" class="fa-regular fa-circle-play"></i>
+                </div>
               </div>
               <p>A cure for wellness</p>
               <span>Subtitle</span>
             </div>
 
             <div class="box-song"> 
-              <div class="album"><img src="img/sinister.jpeg" alt="Cover Sinister"></div>
+              <div class="album"><img src="img/sinister.jpeg" alt="Cover Sinister">
+                <div class="play">
+                  <i id="click-play" class="fa-regular fa-circle-play"></i>
+                </div></div>
               <p>Sinister</p>
               <span>Subtitle</span>
             </div>
@@ -153,6 +171,9 @@
             <div class="box-song"> 
               <div class="album">
                 <img src="img/radar.jpeg" alt="Cover Release">
+                <div class="play">
+                  <i id="click-play" class="fa-regular fa-circle-play"></i>
+                </div>
               </div>
               <p>Release Radar</p>
             </div>
@@ -160,6 +181,9 @@
             <div class="box-song"> 
               <div class="album">
                 <img src="img/mixdaily.jpeg" alt="Cover Daily mix">
+                <div class="play">
+                  <i id="click-play" class="fa-regular fa-circle-play"></i>
+                </div>
               </div>
               <p>Daily Mix 1</p>
             </div>
@@ -172,6 +196,9 @@
             <div class="box-song"> 
               <div class="album">
                 <img class="rounded" src="img/youg.jpeg" alt="Cover Youg">
+                <div class="play rounded">
+                  <i id="click-play" class="fa-regular fa-circle-play"></i>
+                </div>
               </div>
               <p>Lana Del Rey</p>
             </div>
@@ -179,6 +206,9 @@
             <div class="box-song"> 
               <div class="album">
                 <img class="rounded" src="img/einaudi.jpeg" alt="Cover einaudi">
+                <div class="play rounded">
+                  <i id="click-play" class="fa-regular fa-circle-play"></i>
+                </div>
               </div>
               <p>Ludovico Einaudi</p>
             </div>
