--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <link rel="icon" href="img/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
   <title>Spotify</title>
 </head>
@@ -24,6 +25,8 @@
         <div class="menu-rapido">
           
           <img src="img/logo.svg" alt="logobig" id="logo-big">
+
+          <div class="active"></div>
 
           <!-- mobile -->
           <img src="img/logo-small.svg" alt="logosmall" id="logo-small">
@@ -213,11 +216,8 @@
               <p>Ludovico Einaudi</p>
             </div>
           </div> 
-
         </section>
-
       </div>
-
     </div>
 
   </main>
@@ -254,10 +254,8 @@
       <div class="player-bottom">
         <span>0:25</span><input type="range" id="pitch"  min="0.1" max="2" step="0.1"><span>4:45</span>
       </div>
-
       
     </div>
-
 
     <!-- footer right -->
     <div class="footer-right">
